--- a/src/Behavior/appsettings.json
+++ b/src/Behavior/appsettings.json
@@ -12,5 +12,13 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "FirebaseConfig": {
+    "apiKey": "AIzaSyAdmXclK9MKqyBOtWi5YNoMirgsHAatFPo",
+    "authDomain": "behavior-1a553.firebaseapp.com",
+    "databaseURL": "https://behavior-1a553.firebaseio.com",
+    "storageBucket": "behavior-1a553.appspot.com",
+    "messagingSenderId": "304296173564"
   }
+
 }
